--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,19 +6,13 @@
     app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.lektion_8_networking_exercise_starwars.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.lektion_8_networking_exercise_starwars.ui.home.HomeFragment"
-        android:label="fragment_home"
+        android:label="@string/Home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/starWarsFragment"
         android:name="com.example.lektion_8_networking_exercise_starwars.ui.starwars.StarWarsFragment"
-        android:label="fragment_star_wars"
+        android:label="@string/star_wars"
         tools:layout="@layout/fragment_star_wars" />
 </navigation>
