Planet can now be searched with people from Star Wars, wehu

--- a/app/src/main/res/layout/fragment_star_wars.xml
+++ b/app/src/main/res/layout/fragment_star_wars.xml
@@ -25,13 +25,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Person:"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_searchText" />
+
+    <TextView
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_searchText" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView_hairColour"
@@ -70,31 +80,50 @@
         app:layout_constraintTop_toBottomOf="@+id/textView_gender" />
 
     <TextView
-        android:id="@+id/textView_gender"
+        android:id="@+id/textView_birthYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gender"
+        android:text="Birth Year"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_eyeColour" />
 
 
     <TextView
-        android:id="@+id/textView_gender"
+        android:id="@+id/textView_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gender"
+        android:text="Height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_skinColour" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_birthYear" />
 
     <TextView
-        android:id="@+id/textView_gender"
+        android:id="@+id/textView_mass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gender"
+        android:text="Mass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_skinColour" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_height" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home Planet:"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_mass" />
+
+    <TextView
+        android:id="@+id/textView_planetName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Planet Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
