--- a/app/src/main/res/layout/fragment_star_wars.xml
+++ b/app/src/main/res/layout/fragment_star_wars.xml
@@ -24,8 +24,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Person! -->
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/person"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Person:"
@@ -41,7 +42,7 @@
         android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/person" />
 
     <TextView
         android:id="@+id/textView_hairColour"
@@ -107,11 +108,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_height" />
 
+    <!-- Planet! -->
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/homePlanet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Planet:"
+        android:text="@string/home_planet"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,9 +123,83 @@
         android:id="@+id/textView_planetName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Planet Name"
+        android:text="@string/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/homePlanet" />
+
+    <TextView
+        android:id="@+id/textView_planetClimate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/climate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetName" />
+
+    <TextView
+        android:id="@+id/textView_planetGravity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/gravity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetClimate" />
+
+    <TextView
+        android:id="@+id/textView_planetTerrain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/terrain"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetGravity" />
+
+    <TextView
+        android:id="@+id/textView_planetRotationPeriod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/rotation_period"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetTerrain" />
+
+    <TextView
+        android:id="@+id/textView_planetOrbitalPeriod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/orbital_period"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetRotationPeriod" />
+
+    <TextView
+        android:id="@+id/textView_planetDiameter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/diameter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetOrbitalPeriod" />
+
+    <TextView
+        android:id="@+id/textView_planetSurface_Water"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/surface_water"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetDiameter" />
+
+    <TextView
+        android:id="@+id/textView_population"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/population"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_planetSurface_Water" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
